# eventix-blockchain-ticketing

./: .firebaserc  .gitignore  Anchor.toml  DEMO-README.md  DETAILED_SRS.md  README.md  firebase.json  package-lock.json  package.json  start-all.js  start-local.js
.firebase/: hosting.ZXZlbnRpeA.cache
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
backend/: database.js  mongodb.js  package-lock.json  package.json  server.js
eventix/: about.html  auth-server.js  auth.js  currency-utils.js  database.js  events.html  getstarted.html  includes.js  index.html  login.html  mytickets.html  package-lock.json  package.json  register.html  resale.html  server.js  style.css
eventix/data/: events.json
minting-service/: minting-server.js  package-lock.json  package.json
programs/ticket_market/: Cargo.toml
programs/ticket_market/src/: lib.rs
utils/: demo-keypair.json
